fix: hide logo tagline on mobile for better fit

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -28,6 +28,14 @@
   }
 }
 
+.logo-tagline {
+  display: none;
+
+  @media (min-width: $mobile-breakpoint) {
+    display: inline;
+  }
+}
+
 // Desktop navigation
 .main-nav {
   display: none;
